added last section top to footer

--- a/index.html
+++ b/index.html
@@ -283,6 +283,56 @@
             </div>
         </div>
     </section>
+
+
+
+    <!-- We Are Binate Section Start -->
+<section class="py-16 sm:py-24 bg-white overflow-hidden">
+  <div class="max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8">
+    
+    <!-- Top Green Banner -->
+    <div class="relative z-10 max-w-4xl mx-auto bg-[#34d399] rounded-2xl shadow-xl p-8 md:p-12 text-center md:-mb-24">
+      <h2 class="text-3xl md:text-4xl font-bold text-white">
+        Recommended By 98% Of <br> Our Retained Clients
+      </h2>
+      <p class="mt-4 text-lg text-white/90">
+        For years we have been serving our clients with market fit products.
+      </p>
+    </div>
+
+  </div>
+
+  <!-- Bottom Black Section -->
+  <div class="bg-gray-900 w-full">
+    <div class="max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8 pt-32 md:pt-40 pb-16">
+      <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 lg:gap-16 items-center">
+
+        <!-- Left Image -->
+        <div class="flex justify-center">
+          <img src="./assets/last-image.svg" alt="Team at Binate" class="w-full max-w-lg h-auto">
+        </div>
+
+        <!-- Right Content -->
+        <div class="text-center lg:text-left">
+          <p class="text-lg font-semibold text-[#34d399]">Who Are We?</p>
+          <h3 class="mt-2 text-4xl md:text-5xl font-bold text-white">We are Binate</h3>
+          <p class="mt-6 text-gray-300 leading-relaxed">
+            A one-stop software solution provider for companies around the globe. Since our inception in 2016, we have been focusing on building go-to-market solutions for business. To this day we have successfully delivered 110+ projects and have satisfied 60+ clients across the world. Our next goal is to deliver digital solutions for your business.
+          </p>
+          <div class="mt-8">
+            <a href="#" class="inline-flex items-center gap-2 rounded-full bg-[#34d399] px-6 py-3 text-base font-semibold text-white shadow-sm hover:bg-[#2cb984] transition-colors">
+              Hire a developer
+              <!-- Arrow Icon -->
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
+            </a>
+          </div>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+</section>
+<!-- We Are Binate Section End -->
         </main>
     </div>
 
