added footer section

--- a/index.html
+++ b/index.html
@@ -333,6 +333,90 @@
   </div>
 </section>
 <!-- We Are Binate Section End -->
+
+
+<!-- Footer Section Start -->
+<footer class="bg-[#1C1C1C] text-gray-400 border-2 border-red-600">
+  <div class="max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
+    
+    <!-- Footer Content Grid -->
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12 lg:gap-8">
+
+      <!-- Column 1: About Binate -->
+      <div class="md:col-span-2 lg:col-span-2">
+        <!-- Demo Logo: Replace with your actual logo -->
+        <img src="./assets/logo.svg" alt="Binate Logo" class="w-40 mb-4">
+        <p class="leading-relaxed">
+          A one-stop software solution provider for companies around the globe. Since our inception in 2016, we have been focusing on building go-to-market solutions for business. To this day we have successfully delivered 110+ projects and have satisfied 60+ clients across the world. Our next goal is to deliver digital solutions for your business.
+        </p>
+        <div class="mt-6 flex space-x-4">
+          <a href="#" class="w-10 h-10 flex items-center justify-center bg-gray-700/50 hover:bg-gray-600/50 rounded-full transition-colors">
+            <!-- Facebook Icon -->
+            <svg class="h-5 w-5 text-gray-300" fill="currentColor" viewBox="0 0 24 24"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v2.385z"/></svg>
+          </a>
+          <a href="#" class="w-10 h-10 flex items-center justify-center bg-gray-700/50 hover:bg-gray-600/50 rounded-full transition-colors">
+            <!-- LinkedIn Icon -->
+            <svg class="h-5 w-5 text-gray-300" fill="currentColor" viewBox="0 0 24 24"><path d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.59-11.018-3.714v-2.155z"/></svg>
+          </a>
+          <a href="#" class="w-10 h-10 flex items-center justify-center bg-gray-700/50 hover:bg-gray-600/50 rounded-full transition-colors">
+             <!-- Twitter Icon -->
+            <svg class="h-5 w-5 text-gray-300" fill="currentColor" viewBox="0 0 24 24"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616v.064c0 2.298 1.634 4.218 3.801 4.654-.707.192-1.452.232-2.224.084.616 1.923 2.394 3.316 4.491 3.354-1.721 1.354-3.887 2.16-6.235 2.16-.42 0-.832-.023-1.234-.072 2.149 1.385 4.706 2.201 7.447 2.201 9.21 0 14.155-7.643 13.795-14.546.962-.695 1.797-1.562 2.457-2.54z"/></svg>
+          </a>
+        </div>
+      </div>
+
+      <!-- Column 2: Links -->
+      <div>
+        <h3 class="text-white text-lg font-bold">Resources</h3>
+        <ul class="mt-4 space-y-3">
+          <li><a href="#" class="hover:text-white transition-colors">Home</a></li>
+          <li><a href="#" class="hover:text-white transition-colors">Our Service</a></li>
+          <li><a href="#" class="hover:text-white transition-colors">Industries</a></li>
+          <li><a href="#" class="hover:text-white transition-colors">Case Studies</a></li>
+          <li><a href="#" class="hover:text-white transition-colors">About Us</a></li>
+        </ul>
+
+        <h3 class="text-white text-lg font-bold mt-8">Terms & Policy</h3>
+        <ul class="mt-4 space-y-3">
+            <li><a href="#" class="hover:text-white transition-colors">Privacy Policy</a></li>
+            <li><a href="#" class="hover:text-white transition-colors">Terms & Conditions</a></li>
+        </ul>
+      </div>
+      
+      <!-- Column 3: Contact -->
+      <div>
+        <h3 class="text-white text-lg font-bold">Contact</h3>
+        <ul class="mt-4 space-y-4">
+          <li class="flex items-center gap-3">
+            <!-- Phone Icon -->
+            <svg class="w-5 h-5 flex-shrink-0 text-gray-400" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 002.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 01-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 00-1.091-.852H4.5A2.25 2.25 0 002.25 6.75z" /></svg>
+            <span>Phone: +880 197 722 6401</span>
+          </li>
+          <li class="flex items-center gap-3">
+             <!-- Email Icon -->
+            <svg class="w-5 h-5 flex-shrink-0 text-gray-400" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75" /></svg>
+            <span>Email: sales@binate-solutions.com</span>
+          </li>
+          <li class="border-t border-gray-700/50 my-4"></li>
+          <li class="flex items-start gap-3">
+             <!-- Location Icon -->
+            <svg class="w-5 h-5 flex-shrink-0 text-gray-400 mt-1" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 11-6 0 3 3 0 016 0z" /><path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z" /></svg>
+            <span>House-1148 (1st, 3rd, & 4th floor) Road 9A(Old-48), Mirpur DOHS, Dhaka-1216 Bangladesh</span>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Copyright Section -->
+    <div class="mt-16 pt-8 border-t border-gray-700/50 text-center">
+      <p>
+        Copyright © 2025, Made with <span class="text-red-500">&hearts;</span> Wardun Al Sajeeb.
+      </p>
+    </div>
+  </div>
+</footer>
+<!-- Footer Section End -->
+
         </main>
     </div>
 
