--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="relative z-10 max-w-screen-xl mx-auto flex flex-col-reverse lg:flex-row items-center justify-between gap-12 px-4 sm:px-6 lg:px-8">
                     <!-- left section -->
                     <div class="lg:w-1/2 space-y-6 text-center lg:text-left">
-                        <h1 class="text-5xl lg:text-6xl font-extrabold leading-tight text-gray-800">
+                        <h1 class="text-5xl lg:text-6xl font-extrabold leading-tight text-gray-800" data-aos="fade-down" data-aos-duration="2500">
                             Personalized <br> 
                             <span class="text-[#34d399]">Software Solutions</span> <br> 
                             For Your Business Growth
@@ -313,7 +313,7 @@
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 lg:gap-16 items-center">
 
         <!-- Left Image -->
-        <div class="flex justify-center" data-aos="fade-right" data-aos-duration="1000">
+        <div class="flex justify-center" data-aos="fade-down" data-aos-duration="1000">
           <img src="./assets/last-image.svg" alt="Team at Binate" class="w-full max-w-lg h-auto">
         </div>
 
